Make EA+Polymer sections collapsable resolve #208

--- a/app/assets/stylesheets/elemental_composition.scss
+++ b/app/assets/stylesheets/elemental_composition.scss
@@ -7,6 +7,10 @@ table.elemental-composition, table.elemental-composition-custom {
     margin-bottom: 5px;
   }
 
+  td {
+    vertical-align: top;
+  }
+
   .form-inline .form-group {
     padding-right: 10px;
     padding-top: 5px;
